[project]
name = "planetes-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "colorlog==6.10.1",
    "matplotlib==3.8.4",
    "numba>=0.62.0",
    "numpy==2.4.2",
    "pyyaml==6.0.3",
    "scipy==1.17.1",
]
